--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="background_buttons">#88c616</color>
+    <color name="white">#BA1D1D</color>
+    <color name="background_buttons">#21AD7C</color>
 </resources>
