--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,29 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical"
     android:gravity="center"
-    android:padding="30dp">
+    android:orientation="vertical"
+    android:padding="30dp"
+    tools:context=".MainActivity">
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/etValor1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/first_value"
-        android:inputType="number"
-        />
+        android:inputType="number" />
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/etValor2"
-        android:hint="@string/second_value"
-        android:layout_marginTop="10dp"
-        android:inputType="number"/>
-    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btn_add"
+        android:layout_marginTop="10dp"
+        android:hint="@string/second_value"
+        android:inputType="number" />
+
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:backgroundTint="@color/background_buttons"
-        android:id="@+id/btnAdd"/>
+        android:text="@string/btn_add" />
 </LinearLayout>
