--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,29 +6,37 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="30dp"
+    android:padding="50dp"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/etValor1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/first_value"
-        android:inputType="number" />
+  <ImageView
+      android:layout_width="160dp"
+      android:layout_height="120dp"
+      android:src="@drawable/logo"
+      />
 
     <EditText
-        android:id="@+id/etValor2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/etUsername"
+        android:hint="@string/username_value"
         android:layout_marginTop="10dp"
-        android:hint="@string/second_value"
-        android:inputType="number" />
-
-    <Button
-        android:id="@+id/btnAdd"
+        android:drawableStart="@drawable/person"
+        android:drawablePadding="10dp"
+        />
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:backgroundTint="@color/background_buttons"
-        android:text="@string/btn_add" />
+        android:id="@+id/etPassword"
+        android:hint="@string/password_value"
+        android:drawableStart="@drawable/lock"
+        android:drawablePadding="10dp"
+        android:inputType="textPassword"
+        />
+      <Button
+          android:id="@+id/btnLogin"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="@string/btn_login"/>
+
 </LinearLayout>
